--- a/Lab1/Lab1.html
+++ b/Lab1/Lab1.html
@@ -7,14 +7,17 @@
     <title>Canvas</title>
 
     <style type="text/css">
-	
+	canvas{
+        border: 5px solid black;
+    }
     </style>
 
   </head>
 
   <body>
 
-    <canvas id="canvasOne"></canvas>
+    <canvas id="canvasOne">
+    </canvas>
 
     <script type="text/javascript">
 		// Gets a handle to the element with id canvasOne.
