--- a/Lab1/Lab1.html
+++ b/Lab1/Lab1.html
@@ -16,7 +16,7 @@
 
   <body>
 
-    <canvas id="canvasOne">
+    <canvas id="canvasOne" width="500px" height="500px">
     </canvas>
 
     <script type="text/javascript">
