--- a/Lab1/Lab1.html
+++ b/Lab1/Lab1.html
@@ -35,8 +35,9 @@
         //print text
         ctx.fillText("Liam Ryan", 10, 50);
        
-        
-		// Create a filled rectangle 	
+        // Create a filled rectangle 	
+        ctx.fillRect(100, 100, 150, 100);
+
     </script>
 
   </body>
