--- a/Lab1/Lab1.html
+++ b/Lab1/Lab1.html
@@ -35,11 +35,13 @@
         //print text
         ctx.fillText("Liam Ryan", 10, 50);
        
-        //Change color
-        ctx.fillStyle = "rgb(255, 255, 0)";
+        
         // Create a filled rectangle 	
         ctx.fillRect(100, 100, 150, 100);
-
+        // Change color
+        ctx.fillStyle = "rgb(255, 255, 0)";
+         // Create a second filled rectangle 	
+         ctx.fillRect(50,150, 150, 100);
     </script>
 
   </body>
