outline colors changed

--- a/Lab1/Lab1.html
+++ b/Lab1/Lab1.html
@@ -47,12 +47,14 @@
 
          //creating circles
          ctx.beginPath();
+         ctx.strokeStyle = "blue";
          ctx.arc(150,150, 30, 0, 2*Math.PI);
          ctx.fillStyle = "rgb(255, 100, 150)";
          ctx.fill();
          ctx.stroke(); 
 
          ctx.beginPath();
+         ctx.strokeStyle = "orange";
          ctx.arc(100,200, 30, 0, 2*Math.PI);
          ctx.fillStyle = "rgb(150, 150, 150)";
          ctx.fill();
