--- a/Lab2/Lab2.html
+++ b/Lab2/Lab2.html
@@ -11,13 +11,16 @@
       body {
           background-color: white;
       }
+      canvas{
+        border: 5px solid black;
+    }
     </style>
 
   </head>
 
   <body>
 
-    <canvas id="canvas-for-ball"></canvas>
+    <canvas id="canvas-for-ball" height="500" width="500"></canvas>
 
     <script type="text/javascript">
       // Gets a handle to the element with id canvasOne.
