--- a/Lab2/Lab2.html
+++ b/Lab2/Lab2.html
@@ -6,7 +6,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Canvas</title>
-
+    <h1>Liam Ryan</h1>
     <style type="text/css">
       body {
           background-color: white;
@@ -32,6 +32,7 @@
       var y = 10;
       // A function to repeat every time the animation loops.
       function repeatme() {
+        
         // Draw the ball (stroked, not filled).
         ctx.beginPath();
         ctx.arc(50, y, 3, 0, 2 * Math.PI);
