--- a/Lab2/Lab2.html
+++ b/Lab2/Lab2.html
@@ -32,7 +32,8 @@
       var y = 10;
       // A function to repeat every time the animation loops.
       function repeatme() {
-        
+        // Clear Canvas on each frame
+        ctx.clearRect(0, 0, 500,500);
         // Draw the ball (stroked, not filled).
         ctx.beginPath();
         ctx.arc(50, y, 3, 0, 2 * Math.PI);
