--- a/Lab2/Lab2.html
+++ b/Lab2/Lab2.html
@@ -31,25 +31,37 @@
       // The vertical location of the ball.
       var y = 10;
       var ySpeed = 1;
+      var x = 50;
+      var xSpeed = 1;
       // A function to repeat every time the animation loops.
       function repeatme() {
         // Clear Canvas on each frame
         ctx.clearRect(0, 0, 500,500);
         // Draw the ball (stroked, not filled).
         ctx.beginPath();
-        ctx.arc(50, y, 3, 0, 2 * Math.PI);
+        ctx.arc(x, y, 3, 0, 2 * Math.PI);
         ctx.stroke();
-        // Update the y location.
+        // Update the y and x location.
         y += ySpeed;
+        x += xSpeed;
         // Reverse ball direction on contact with bottom
         if(y >= canvas.height-3)
         {
            ySpeed = ySpeed*-1;
         }
         // Reverse ball direction on contact with top
-        else if(y <= 0)
+        else if(y <= 3)
         {
             ySpeed = ySpeed*-1;
+        }
+        // Bounce from side to side
+        if(x >= canvas.width-3)
+        {
+           xSpeed = xSpeed*-1;
+        }
+        else if(x <= 3)
+        {
+            xSpeed = xSpeed*-1;
         }
         window.requestAnimationFrame(repeatme);
       }
