--- a/Lab2/Lab2.html
+++ b/Lab2/Lab2.html
@@ -75,16 +75,17 @@
         var ctx = canvas.getContext("2d");
 
         class Ball {
-            constructor(xPos, yPos, xVelocity, yVelocity) {
+            constructor(xPos, yPos, xVelocity, yVelocity,radius) {
                 this.yPos = yPos;
                 this.yVelocity = yVelocity;
                 this.xPos = xPos;
                 this.xVelocity = xVelocity;
+                this.radius = radius;
             }
             Draw() {
                 // Draw the ball (stroked, not filled).
                 ctx.beginPath();
-                ctx.arc(this.xPos, this.yPos, 3, 0, 2 * Math.PI);
+                ctx.arc(this.xPos, this.yPos,this.radius, 0, 2 * Math.PI);
                 ctx.stroke();
             }
             Move() {
@@ -92,23 +93,23 @@
                 this.yPos += this.yVelocity;
                 this.xPos += this.xVelocity;
                 // Reverse ball direction on contact with bottom
-                if (this.yPos >= canvas.height - 3) {
+                if (this.yPos >= canvas.height - this.radius) {
                     this.yVelocity = this.yVelocity * -1;
                 }
                 // Reverse ball direction on contact with top
-                else if (this.yPos <= 3) {
+                else if (this.yPos <= this.radius) {
                     this.yVelocity = this.yVelocity * -1;
                 }
                 // Bounce from side to side
-                if (this.xPos >= canvas.width - 3) {
+                if (this.xPos >= canvas.width - this.radius) {
                     this.xVelocity = this.xVelocity * -1;
                 }
-                else if (this.xPos <= 3) {
+                else if (this.xPos <= this.radius) {
                     this.xVelocity = this.xVelocity * -1;
                 }
             }
         }
-        myBall = new Ball(50, 10, 1, 1);
+        myBall = new Ball(50, 49, 10, 10,49);
         function repeatme() {
             ctx.clearRect(0, 0, 500, 500);
             myBall.Draw();
