--- a/Lab2/Lab2.html
+++ b/Lab2/Lab2.html
@@ -98,7 +98,7 @@
         myBall = new Ball(50, 49, 1, 1, 49, 0);
         function repeatme() {
             //clear canvas every frame
-            ctx.clearRect(0, 0, 500, 500);
+            ctx.clearRect(0, 0, canvas.width, canvas.height);
             myBall.Draw();
             myBall.Move();
             myBall.rotate();
