--- a/Lab3/Lab3_Mouse.html
+++ b/Lab3/Lab3_Mouse.html
@@ -31,9 +31,10 @@
       
       canvas.addEventListener("click", function(event) { 
         ctx.beginPath();
-        ctx.arc(50, 50, 6, 0, 2 * Math.PI);
+        ctx.arc(event.clientX, event.clientY, 6, 0, 2 * Math.PI);
         ctx.fill();
-        
+        console.log("x event: " + event.clientX);
+        console.log("Y event: " + event.clientY);
         noClicks += 1;
         console.log(noClicks);
       });
