keyboard movement added

--- a/Lab3/Lab3_Keyboard.html
+++ b/Lab3/Lab3_Keyboard.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 
 <html>
-
 <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
   <head>
     <meta charset="UTF-8">
@@ -41,7 +40,9 @@
 			case 37:
 				console.log('left arrow key pressed!');
 				break;
-
+            case 38:
+                console.log('up arrow pressed');
+                break;
 			// key code for right arrow
 			case 39:
 				console.log('right arrow key pressed!');
