--- a/Lab3/Lab3_Paddle.html
+++ b/Lab3/Lab3_Paddle.html
@@ -179,6 +179,9 @@
                     console.log('down arrow pressed');
             }
         });
+        canvas.addEventListener("mousemove", function(event) { 
+            myPaddle.yPos = event.clientY-canvas.offsetTop;
+        });
         function repeatme() {
             //clear canvas every frame
             ctx.clearRect(0, 0, canvas.width, canvas.height);
