--- a/Lab3/Lab3_Paddle.html
+++ b/Lab3/Lab3_Paddle.html
@@ -44,17 +44,17 @@
             }
             //paddle x and y corodinate 
             move(movement) {
-                if (movement == 3) {
-                    this.yPos += -1;
+                if (movement == 3 && (this.yPos >= 0)) {
+                    this.yPos -= 1;//move up
                 }
-                else if (movement == 4) {
-                    this.yPos += 1;
+                else if (movement == 4 && (this.yPos <= canvas.height - this.height)) {
+                    this.yPos += 1;//move down
                 }
-                else if (movement == 1) {
-                    this.xPos += -1;
+                else if (movement == 1 && (this.xPos >= 0)) {
+                    this.xPos -= 1;//move left
                 }
-                else if (movement == 2) {
-                    this.xPos += 1;
+                else if (movement == 2 && (this.xPos <= canvas.width - this.width)) {
+                    this.xPos += 1;//move right
                 }
 
             }
@@ -131,12 +131,12 @@
         myPaddle = new Paddle(26, 100, 25, 25);
         myPaddle2 = new Paddle(26, 100, 25, 450);
         var rotateSpeed = 0.0250;
+        var mousePosition;
         //Add a Javascript event listener to the keypress event.
         window.addEventListener("keypress", function (event) {
             // Just log the event to the console.
             console.log(event);
         });
-
         //keypresses with jQuery
         $(document.body).on('keydown', function (e) {
             console.log(e.which);
@@ -160,17 +160,12 @@
                 case 40:
                     myPaddle.move(4);
                     console.log('down arrow pressed');
-            }
-        });
-        //SECOND PADDLE MOVEMENT
-        $(document.body).on('keydown', function (e) {
-            console.log(e.which);
-            switch (e.which) {
-                //A
+                    break;
                 case 65:
                     myPaddle2.move(1);
                     console.log('left arrow key pressed!');
                     break;
+                //Second Paddle
                 //W
                 case 87:
                     myPaddle2.move(3);
@@ -185,21 +180,13 @@
                 case 83:
                     myPaddle2.move(4);
                     console.log('down arrow pressed');
-            }
-        });
-        //listen for mouse movement in x and 
-        canvas.addEventListener("mousemove", function (event) {
-            myPaddle.yPos = event.clientY - canvas.offsetTop;
-        });
-        $(document.body).on('keydown', function (e) {
-            switch (e.which) {
+                //Rotation
                 //z
                 case 90:
                     //slow down/invert rotatespeed
-                     //if statement to prevent inverse rotation
-                    if(rotateSpeed > 0)
-                    {
-                    rotateSpeed = rotateSpeed-0.025;
+                    //if statement to prevent inverse rotation
+                    if (rotateSpeed > 0) {
+                        rotateSpeed = rotateSpeed - 0.025;
                     }
                     console.log(rotateSpeed);
                     break;
@@ -207,14 +194,21 @@
                 case 88:
                     //increase rotate speed
                     //if statement for speed cap
-                    if(rotateSpeed < 0.1)
-                    {
-                    rotateSpeed = rotateSpeed+0.025;
+                    if (rotateSpeed < 0.1) {
+                        rotateSpeed = rotateSpeed + 0.025;
                     }
                     console.log(rotateSpeed);
                     break;
             }
         });
+        //listen for mouse movement in y 
+        canvas.addEventListener("mousemove", function (event) {
+            mousePosition = event.clientY - canvas.offsetTop;
+            if (mousePosition >= 0 && mousePosition <= canvas.height - myPaddle.height) {
+                myPaddle.yPos = mousePosition
+            }
+        });
+
         function repeatme() {
             //clear canvas every frame
             ctx.clearRect(0, 0, canvas.width, canvas.height);
