+= was missing on rotation

--- a/Lab3/Lab3_Paddle.html
+++ b/Lab3/Lab3_Paddle.html
@@ -79,7 +79,7 @@
             //rotate takes argument rotate speed
             rotate(rotateSpeed) {
                 //rotation speed
-                this.rotation = rotateSpeed;
+                this.rotation += rotateSpeed;
                 //calculate the outer points of the circle for the peace symbol
                 // x= (r*cos(0) + rotation)+ center x position of cirlce
                 // y= (r*sin(0) + rotation)+ center y position of cirlce
