--- a/Lab4/Lab4_Paddle.html
+++ b/Lab4/Lab4_Paddle.html
@@ -75,7 +75,7 @@
                 this.msgTime = null;
             }
             draw() {
-                //Draw the ball (stroked, not filled).
+                //Draw the ball (stroked,  filled red).
                 ctx.beginPath();
                 ctx.fillStyle = "red";
                 ctx.arc(this.xPos, this.yPos, this.radius, 0, 2 * Math.PI);
@@ -112,9 +112,12 @@
                 ctx.lineTo(x4, y4);
                 ctx.stroke();
             }
-            move() {
+            move(speed) {
                 // Update the y and x location.
                 this.yVelocity += this.gravity;
+                //speed controls no working  as intended
+                this.xVelocity += speed;
+                this.yVelocity += speed;
                 this.yPos += this.yVelocity;
                 this.xPos += this.xVelocity;
 
@@ -198,6 +201,7 @@
         myPaddle = new Paddle(26, 100, 50);
         myPaddle2 = new Paddle(26, 100, 450);
         var rotateSpeed = 0.025;
+        var speed = 0;
         var mousePosition;
         //Add a Javascript event listener to the keypress event.
         window.addEventListener("keypress", function (event) {
@@ -247,6 +251,7 @@
                 case 83:
                     myPaddle2.move(4);
                     console.log('down arrow pressed');
+                    break;
                 //Rotation
                 //z
                 case 90:
@@ -274,6 +279,28 @@
                     }
                     console.log(rotateSpeed);
                     break;
+                //Speed of ball
+                //e
+                case 69:
+                    //increase speed
+                    if (speed < 0.1) {
+                        speed = speed + 0.025;
+                        //if speed is above the cap set it to the cap
+                        if (speed > 0.1) {
+                            speed = 0.1;
+                        }
+                    }
+                    break;
+                //q
+                case 81:
+                    //decrease speed
+                    if (speed > 0) {
+                        speed -= 0.1;
+                        if (speed < 0) {
+                            speed = 0;
+                        }
+                    }
+                    break;
             }
         });
         //listen for mouse movement in y 
@@ -290,7 +317,7 @@
             myPaddle.draw();
             myBall.draw();
             myBall.rotate(rotateSpeed);
-            myBall.move();
+            myBall.move(speed);
             myBall.collision();
             myBall.drawMsg();
             window.requestAnimationFrame(repeatme);
