--- a/Lab5/3dGrpahics.html
+++ b/Lab5/3dGrpahics.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-
+<script>"https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"</script>
 <head>
     <meta charset="UTF-8">
     <title></title>
