--- a/Lab5/3dGrpahics.html
+++ b/Lab5/3dGrpahics.html
@@ -11,6 +11,8 @@
 
 <body>
     <script type="text/javascript">
+        // Implement scene - Create a Three.js scene to hold objects.
+        var scene = new THREE.Scene();
     </script>
 </body>
 
