--- a/Lab5/3dGrpahics.html
+++ b/Lab5/3dGrpahics.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <script>"https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"</script>
+
 <head>
     <meta charset="UTF-8">
     <title></title>
@@ -13,6 +14,11 @@
     <script type="text/javascript">
         // Implement scene - Create a Three.js scene to hold objects.
         var scene = new THREE.Scene();
+       //sphere created and added to scene
+        const geometry = new THREE.SphereGeometry( 15, 32, 16 ); 
+        const material = new THREE.MeshBasicMaterial( { color: 0xffff00 } ); 
+        const sphere = new THREE.Mesh( geometry, material ); scene.add( sphere );
+       
     </script>
 </body>
 
