--- a/Lab5/3dGrpahics.html
+++ b/Lab5/3dGrpahics.html
@@ -18,7 +18,10 @@
         const geometry = new THREE.SphereGeometry( 15, 32, 16 ); 
         const material = new THREE.MeshBasicMaterial( { color: 0xffff00 } ); 
         const sphere = new THREE.Mesh( geometry, material ); scene.add( sphere );
-       
+        // Create a camera with specified properties.
+        var camera = new THREE.PerspectiveCamera(80, window.innerWidth / window.innerHeight, 0.1, 1000);
+        // Set camera position
+
     </script>
 </body>
 
