--- a/Lab5/3dGrpahics.html
+++ b/Lab5/3dGrpahics.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<script>"https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"</script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
 
 <head>
     <meta charset="UTF-8">
@@ -14,14 +14,16 @@
     <script type="text/javascript">
         // Implement scene - Create a Three.js scene to hold objects.
         var scene = new THREE.Scene();
-       //sphere created and added to scene
-        const geometry = new THREE.SphereGeometry( 15, 32, 16 ); 
-        const material = new THREE.MeshBasicMaterial( { color: 0xffff00 } ); 
-        const sphere = new THREE.Mesh( geometry, material ); scene.add( sphere );
+      
         // Create a camera with specified properties.
-        var camera = new THREE.PerspectiveCamera(80, window.innerWidth / window.innerHeight, 0.1, 1000);
+        var camera = new THREE.PerspectiveCamera(76, window.innerWidth / window.innerHeight, 0.1, 1000);
         // Set camera position
-
+        camera.position.z= 80;
+         //sphere created and added to scene
+         const geometry = new THREE.SphereGeometry( 15, 32, 16 ); 
+        const material = new THREE.MeshBasicMaterial( { color: 0xffff00 } ); 
+        const sphere = new THREE.Mesh( geometry, material ); 
+        scene.add( sphere );
     </script>
 </body>
 
