--- a/Lab5/3dGrpahics.html
+++ b/Lab5/3dGrpahics.html
@@ -25,7 +25,7 @@
         document.body.appendChild(renderer.domElement);
         //sphere created and added to scene
         const geometry = new THREE.SphereGeometry(15, 32, 16);
-        const material = new THREE.MeshBasicMaterial({ color: 0xffff00, wireframe: false});
+        const material = new THREE.MeshLambertMaterial({ color: 0xffff00, wireframe: false});
         const sphere = new THREE.Mesh(geometry, material);
         scene.add(sphere);
         //spotlight added
