ball move to right

--- a/Lab5/3dGrpahics.html
+++ b/Lab5/3dGrpahics.html
@@ -40,6 +40,9 @@
             //Code to rotate sphere
             sphere.rotation.x += 0.01;
             sphere.rotation.y += 0.01;
+            //move ball to side
+            sphere.position.x += 0.1;
+        
             requestAnimationFrame(repeatme)
             
         }
